--- a/backend/dashboard/index.html
+++ b/backend/dashboard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base08 - Framework</title>
+    <title>Painel Administrativo</title>
     {% vite_hmr_client %}
     {% vite_asset 'src/main.jsx' %}
 </head>
